[gd_scene load_steps=6 format=3 uid="uid://bfqwv51eyfym2"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_yy8fh"]
[ext_resource type="Script" path="res://scenes/components/hurt_box_component.gd" id="2_tdb04"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="3_5epwj"]
[ext_resource type="Script" path="res://scenes/components/hit_box_component.gd" id="4_j7j6r"]
[ext_resource type="Script" path="res://scenes/enemies/detection_box.gd" id="5_wkhex"]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_yy8fh")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="MovementCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -121)

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 1024
collision_mask = 512
script = ExtResource("2_tdb04")
health_component = NodePath("../HealthComponent")

[node name="HurtBoxCollider" type="CollisionShape2D" parent="HurtBoxComponent"]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_5epwj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 256
script = ExtResource("4_j7j6r")

[node name="DetectionBox" type="Area2D" parent="."]
collision_layer = 64
script = ExtResource("5_wkhex")
